# PrintFarmCompanion

./: .dev.vars.example  .gitignore  .npmrc  README.md  drizzle.config.ts  package-lock.json  package.json  remote-data-only.sql  schema.sql  seed.sql  svelte.config.js  wrangler.jsonc  wrangler.toml
.claude/: CLAUDE.md
.drizzle/: visualizer.json
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bambu.rs  lib.rs  logs.rs  main.rs
docs/: authentication.md  dashboard-migration-plan.md  database-design.md  global-print-queue.md  handoff-2026-05-21.md  handoff-2026-05-23.md  pi-transport-improvements.md  print-start-flow.md  saas-migration-plan.md  shopify-sync-setup.md  todo-h2s-print-support.md  todo_global_queue.md
drizzle/: 0000_lumpy_lyja.sql  0000_nifty_dakota_north.sql  0000_solid_red_wolf.sql  0001_flippant_skaar.sql  0001_views.sql  0002_nullable_module_fks.sql  0003_drop_object_sku.sql  0004_printer_slots.sql  0005_module_slot_weight.sql  0006_spool_preset_color_hex.sql  0007_shopify_skus.sql  0008_shopify_settings.sql  0009_inventory_log_shopify_order.sql  0010_object_categories.sql  0011_print_queue.sql  0012_auth.sql  0013_tenancy_objects.sql
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
local-file-handler/: .env.example  README.md  autoStartSetup.md  launchagent.example  package-lock.json  package.json  server.js  test.js
memory/: MEMORY.md  project_print_modules_schema.md
pi/: SETUP.md  (+8 more)
(+199 files in other folders)
